@@ -1,3 +1,7 @@
+Serf 1.3.6 [2014-06-09, from /tags/1.3.6, rxxxx]
+  Revert r2319 from serf 1.3.5: this change was making serf call handle_response
+    multiple times in case of an error response, leading to unexpected behavior.
+
 Serf 1.3.5 [2014-04-27, from /tags/1.3.5, rxxxx]
   Fix issue #125: no reverse lookup during Negotiate authentication for proxies.
   Fix a crash caused by incorrect reuse of the ssltunnel CONNECT request (r2316)
